--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/globals.css" />
     <link href="./images/favicon.ico" rel="icon" sizes="any" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
-    <link rel="stylesheet" href="styles/globals.css" />
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -46,20 +46,16 @@
       </nav>
       <h1 class="full_title">no focus</h1>
       <p class="header_title">
-        Что делать, когда не можешь делать ничего Или почему нам так сложно
-        сконцентрироваться,<br />
-        особенно когда очень надо
+        Что делать, когда не можешь делать ничего <br />Или почему нам так
+        сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
-    <main class="main">
-      <section class="section">
-        <h2 class="title why">
-          Почему сосредоточиться так <br />
-          сложно
-        </h2>
+    <main class="information">
+      <section class="section section_">
+        <h2 class="title why">Почему сосредоточиться так сложно</h2>
         <ul class="article-list">
           <li>
-            <article class="paragraph">
+            <article class="paragraph why_paragraph">
               <h3 class="title title-decor why-title">Многозадачность</h3>
               <p>
                 Особенно сложно сосредоточиться, когда задач много и все они —
@@ -71,7 +67,7 @@
                   href="https://dana.org/article/multicosts-of-multitasking/"
                   target="_blank"
                   >выяснили</a
-                >,что мозгу тяжело концентрироваться даже на двух делах
+                >, что мозгу тяжело концентрироваться даже на двух делах
                 одновременно. А когда в поле внимания попадает несколько важных
                 задач, организм паникует и выделяет кортизол и адреналин —
                 «гормоны стресса». Из-за этого мы работаем невнимательно:
@@ -185,12 +181,17 @@
               <h4 class="how_title title-decor">Прогуляйтесь</h4>
               <p>
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                показал, что созерцание природы повышает концентрацию, в то
-                время как после просмотра городских пейзажей она наоборот
-                понижается. Можно совместить прогулку с физическими упражнениями
-                или бегом — так в мозг поступит ещё больше кислорода и он будет
-                лучше работать. Но и простая двадцатиминутная прогулка — тоже
-                отличный вариант.
+                <a
+                  class="link shadow-decor"
+                  href="https://dana.org/article/multicosts-of-multitasking/"
+                  target="_blank"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
               </p>
             </article>
           </li>
@@ -222,41 +223,41 @@
       <section class="section_picture">
         <h2 class="picture_title title-decor">А можно в картинках?</h2>
         <ul class="picture-list">
-          <li>
+          <li class="sky">
             <img
-              class="picture-list-item sky"
+              class="picture-list-item"
               src="images/sunset.png"
               alt="Небо"
               loading="lazy"
             />
           </li>
-          <li>
+          <li class="ice">
             <img
-              class="picture-list-item ice picture-list-item-ice"
+              class="picture-list-item picture-list-item-ice"
               src="images/ice-cream.png"
               alt="Мороженое"
               loading="lazy"
             />
           </li>
-          <li>
+          <li class="music">
             <img
-              class="picture-list-item music picture-list-item-music"
+              class="picture-list-item picture-list-item-music"
               src="images/tape.png"
               alt="Плеер"
               loading="lazy"
             />
           </li>
-          <li>
+          <li class="book">
             <img
-              class="picture-list-item book picture-list-item-book"
+              class="picture-list-item picture-list-item-book"
               src="images/books.png"
               alt="Книги"
               loading="lazy"
             />
           </li>
-          <li>
+          <li class="street">
             <img
-              class="picture-list-item street picture-list-item-street"
+              class="picture-list-item picture-list-item-street"
               src="images/street.png"
               alt="Улица"
               loading="lazy"
