--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="page">
     <header class="full header decorated-zone">
-      <div class="rec" aria-hidden="true"></div>
+      <span class="rec" aria-hidden="true"></span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -51,7 +51,7 @@
       </p>
     </header>
     <main class="information">
-      <section class="section section_">
+      <section class="section section_why">
         <h2 class="title why">Почему сосредоточиться так сложно</h2>
         <ul class="article-list">
           <li>
@@ -93,7 +93,7 @@
           </li>
         </ul>
       </section>
-      <section class="section">
+      <section class="section section-what">
         <h2 class="what title">Что снижает концентрацию внимания?</h2>
         <ul class="what-article-list">
           <li>
@@ -139,17 +139,17 @@
           </li>
         </ul>
       </section>
-      <section class="section">
+      <section class="section section_how">
         <h2 class="how title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div>
-          <h3 class="title title-decor">
-            5 простых (на самом деле не очень) советов
-          </h3>
-        </div>
         <ul class="article-list">
+          <div>
+            <h3 class="title title-decor">
+            5 простых (на самом деле не очень) советов
+            </h3>
+          </div>
           <li>
             <article class="paragraph">
               <h4 class="how_title title-decor">Представьте небо и облака</h4>
