--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
           секунд)
         </h2>
         <ul class="article-list">
-        <h3 class="title title-decor">
-          5 простых (на самом деле не очень) советов
-        </h3>
+          <div>
+            <h3 class="title title-decor">
+              5 простых (на самом деле не очень) советов
+            </h3>
+          </div>
           <li>
             <article class="paragraph">
               <h4 class="how_title title-decor">Представьте небо и облака</h4>
